@@ -386,3 +386,19 @@ end
 When(/^I select all labels using no identifier$/) do
   @elements = @page.label_elements
 end
+
+When(/^I select the file fields with class "([^"]*)"$/) do |class_name|
+  @elements = @page.file_field_elements(:class => class_name)
+end
+
+Then(/^I should have (\d+) file fields$/) do |num_file_fields|
+  expect(@elements.size).to eql num_file_fields.to_i
+end
+
+Then(/^the title for file field (\d+) should be "([^"]*)"$/) do |file_field_num, title|
+  expect(@elements[file_field_num.to_i - 1].attribute('title')).to eql title
+end
+
+When(/^I select all file fields using no identifier$/) do
+  @elements = @page.file_field_elements
+end
